--- a/collector.html
+++ b/collector.html
@@ -661,6 +661,7 @@
 	<script type="text/javascript" src="js/helper/validator.js"></script>
 	<script type="text/javascript" src="js/helper/form-util.js"></script>
 	<script type="text/javascript" src="js/helper/table-util.js"></script>
+	<script type="text/javascript" src="js/helper/model.js"></script>
 
 	<script type="text/javascript" src="js/education.js"></script>
 	<script type="text/javascript" src="js/course.js"></script>
