Fix submission issue in formIweTask

--- a/collector.html
+++ b/collector.html
@@ -495,7 +495,7 @@
 
 						<!-- tasks -->
 						<div class="col s6">
-							<form id="formIweTask">
+							<form id="formIweTask" onsubmit="return false;">
 								<h6 class="resgen-title">Actividades</h6>
 								<input id="iweTaskIndex" name="iweTaskIndex" type="hidden" value="">
 
