--- a/collector.html
+++ b/collector.html
@@ -76,28 +76,28 @@
 			<!-- education -->
 			<section id="education" class="row section">
 
-				<form id="formEducation" class="col s3">
+				<form id="formEdu" class="col s3">
 					<fieldset class="row">
 						<legend>Escolaridad</legend>
-						<input name="eduIndex" type="hidden" value="">
+						<input name="indexEdu" type="hidden" value="">
 						<div class="input-field col s12">
-							<input id="eduName" name="eduName" type="text" class="validate" data-length="75" maxlength="75">
-							<label for="eduName">Grado</label>
+							<input id="nameEdu" name="nameEdu" type="text" class="validate" data-length="75" maxlength="75">
+							<label for="nameEdu">Grado</label>
 							<span class="helper-text col s10">Ej. Lic. en Administraci&oacute;n</span>
 						</div>
 						<div class="input-field col s12">
-							<input id="eduInstitute" name="eduInstitute" type="text" class="validate" data-length="75" maxlength="75">
-							<label for="eduInstitute">Instituci&oacute;n</label>
+							<input id="instituteEdu" name="instituteEdu" type="text" class="validate" data-length="75" maxlength="75">
+							<label for="instituteEdu">Instituci&oacute;n</label>
 							<span class="helper-text col s10">Ej. UNAM</span>
 						</div>
 						<div class="input-field col s6">
-							<input id="eduStart" name="eduStart" type="text" class="validate" data-length="4" maxlength="4">
-							<label for="eduStart">Inicio</label>
+							<input id="startEdu" name="startEdu" type="text" class="validate" data-length="4" maxlength="4">
+							<label for="startEdu">Inicio</label>
 							<span class="helper-text col s8">Ej. 2015</span>
 						</div>
 						<div class="input-field col s6">
-							<input id="eduEnd" name="eduEnd" type="text" class="validate" data-length="4" maxlength="4">
-							<label for="eduEnd">Fin</label>
+							<input id="endEdu" name="endEdu" type="text" class="validate" data-length="4" maxlength="4">
+							<label for="endEdu">Fin</label>
 							<span class="helper-text col s8">Ej. 2020</span>
 						</div>
 						<div class="input-field col s12">
@@ -106,7 +106,7 @@
 									<button id="btnAuxEdu" name="btnAuxEdu" class="waves-effect btn-flat btn-small" tabindex="-1">Limpiar</button>
 								</div>
 								<div class="col s6">
-									<button id="btnMainEdu" name="btnMainEdu" class="waves-effect btn-flat btn-small">A&ntilde;adir</button>
+									<button id="btnMainEdu" name="btnMainEdu" class="waves-effect btn-flat btn-small">Agregar</button>
 								</div>
 							</div>
 						</div>
@@ -130,20 +130,20 @@
 								<td>Universidad Nacional Aut&oacute;noma de M&eacute;xico</td>
 								<td>2015</td>
 								<td>2020</td>
-								<td><a href="#" onclick="educationHandler.moveUp(event)">&bigtriangleup;</a></td>
-								<td><a href="#" onclick="educationHandler.moveDown(event)">&bigtriangledown;</a></td>
-								<td><a href="#" onclick="educationHandler.select(event)">Editar</a></td>
-								<td><a href="#" onclick="educationHandler.remove(event)">Eliminar</a></td>
+								<td><a href="#" onclick="educationHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
+								<td><a href="#" onclick="educationHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
+								<td><a href="#" onclick="educationHandler.select(event)" title="editar">&#x1F589;</a></td>
+								<td><a href="#" onclick="educationHandler.remove(event)" title="borrar">&#x2327;</a></td>
 							</tr>
 							<tr>
 								<td>Maestr&iacute;a en Administraci&oacute;n</td>
 								<td>Universidad del Valle de M&eacute;xico</td>
 								<td>2020</td>
 								<td>2023</td>
-								<td><a href="#" onclick="educationHandler.moveUp(event)">&bigtriangleup;</a></td>
-								<td><a href="#" onclick="educationHandler.moveDown(event)">&bigtriangledown;</a></td>
-								<td><a href="#" onclick="educationHandler.select(event)">Editar</a></td>
-								<td><a href="#" onclick="educationHandler.remove(event)">Eliminar</a></td>
+								<td><a href="#" onclick="educationHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
+								<td><a href="#" onclick="educationHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
+								<td><a href="#" onclick="educationHandler.select(event)" title="editar">&#x1F589;</a></td>
+								<td><a href="#" onclick="educationHandler.remove(event)" title="borrar">&#x2327;</a></td>
 							</tr>
 						</tbody>
 					</table>
@@ -666,8 +666,6 @@
 	<script type="text/javascript" src="js/handler.js"></script>
 	<script type="text/javascript" src="js/five.js"></script>
 	<script type="text/javascript" src="js/int-work-exp.js"></script>
-
-	<script type="text/javascript" src="js/education.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
