Rename script five.js

--- a/collector.html
+++ b/collector.html
@@ -664,7 +664,7 @@
 	<script type="text/javascript" src="js/helper/table-util.js"></script>
 
 	<script type="text/javascript" src="js/handler.js"></script>
-	<script type="text/javascript" src="js/five.js"></script>
+	<script type="text/javascript" src="js/general.js"></script>
 	<script type="text/javascript" src="js/int-work-exp.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
