Update interface of edu module

--- a/collector.html
+++ b/collector.html
@@ -93,12 +93,12 @@
 						<div class="input-field col s6">
 							<input id="startEdu" name="startEdu" type="text" class="validate" data-length="4" maxlength="4">
 							<label for="startEdu">Inicio</label>
-							<span class="helper-text col s8">Ej. 2015</span>
+							<span class="helper-text col s9">Ej. 2015</span>
 						</div>
 						<div class="input-field col s6">
 							<input id="endEdu" name="endEdu" type="text" class="validate" data-length="4" maxlength="4">
 							<label for="endEdu">Fin</label>
-							<span class="helper-text col s8">Ej. 2020</span>
+							<span class="helper-text col s9">Ej. 2020</span>
 						</div>
 						<div class="input-field col s12">
 							<div class="row" style="margin-bottom: 0px;">
@@ -114,7 +114,7 @@
 				</form>
 				
 				<article class="col s9">
-					<table id="tableEdu" class="striped">
+					<table id="tableEdu" class="highlight centered">
 						<thead>
 							<tr>
 								<th>Grado</th>
@@ -151,10 +151,10 @@
 
 					<div class="row">
 						<div class="col s3 left-align">
-							<button id="btnPrevEdu" data-tab="basic" class="waves-effect btn-flat btn-small">Anterior</button>
+							<button id="btnPrevEdu" data-tab="basic" class="waves-effect btn-flat btn-small">Ant</button>
 						</div>
 						<div class="col s3 push-s6 right-align">
-							<button id="btnNextEdu" data-tab="courses" class="waves-effect btn-flat btn-small">Siguiente</button>
+							<button id="btnNextEdu" data-tab="courses" class="waves-effect btn-flat btn-small">Sig</button>
 						</div>
 					</div>
 				</article>
