Update view of courses module

--- a/collector.html
+++ b/collector.html
@@ -198,7 +198,7 @@
 				</form>
 				
 				<article class="col s9">
-					<table id="tableCourse" class="striped">
+					<table id="tableCourse" class="highlight centered">
 						<thead>
 							<tr>
 								<th>Nombre</th>
@@ -232,10 +232,10 @@
 
 					<div class="row">
 						<div class="col s3 left-align">
-							<button id="btnPrevCourse" data-tab="education" class="waves-effect btn-flat btn-small">Anterior</button>
+							<button id="btnPrevCourse" data-tab="education" class="waves-effect btn-flat btn-small">Ant</button>
 						</div>
 						<div class="col s3 push-s6 right-align">
-							<button id="btnNextCourse" data-tab="languages" class="waves-effect btn-flat btn-small">Siguiente</button>
+							<button id="btnNextCourse" data-tab="languages" class="waves-effect btn-flat btn-small">Sig</button>
 						</div>
 					</div>
 				</article>
