Update view of courses module

--- a/collector.html
+++ b/collector.html
@@ -121,7 +121,7 @@
 								<th>Instituci&oacute;n</th>
 								<th>Inicio</th>
 								<th>Fin</th>
-								<th colspan="4">Opciones</th>
+								<th colspan="4">&nbsp;</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -197,14 +197,14 @@
 					</fieldset>
 				</form>
 				
-				<article class="col s9">
+				<article class="col s8">
 					<table id="tableCourse" class="highlight centered">
 						<thead>
 							<tr>
 								<th>Nombre</th>
 								<th>Lugar</th>
 								<th>Fecha</th>
-								<th colspan="4">Opciones</th>
+								<th colspan="4">&nbsp;</th>
 							</tr>
 						</thead>
 						<tbody>
